# A1Prime-SPB

./: CMakeLists.txt  main.cpp  prime.cpp  prime.hpp  test.cpp
